--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1474,3 +1474,21 @@ message.alert.timerTimeTo=Time to start update
 message.alert.hours=Hours
 message.alert.minutes=Minutes
 message.alert.seconds=Seconds
+merchants.modalOutputSumCommission=Total Fee : __amount __currency
+merchants.withdrawDetails.outputSumCommission=Total Fee
+merchant.commission.rateWithLimit={0}, but not less than {1}
+admin.generalStats.menu.stats=Statistics
+admin.generalStats.menu.mailing=Mailing settings
+admin.generalStats.mailing.status=Enable mailing
+admin.generalStats.mailing.time=Mailing time
+admin.generalStats.mailing.email=Email
+ip.ban.message=Your IP address is banned for {0}. Please try to login again later
+ip.ban.time.minutes = {0} minutes
+ip.ban.time.hours = {0} hours
+btcWallet.subtractFeeFromAmount=Subtract fee from amount
+merchants.modalOutputSumCommission=Total Fee : __amount __currency
+merchants.withdrawDetails.outputSumCommission=Total Fee
+merchant.commission.rateWithLimit={0}, but not less than {1}
+admin.generalStats.button.currencyPairsInOutComis=Statistics by in/out by currencies
+admin.generalStats.button.currencyPairsComissions=Statistics by orders comissions and pairs
+admin.transfers=Transfers
