--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1329,3 +1329,4 @@ message.alert.timerTimeTo=Time to start update
 message.alert.hours=Hours
 message.alert.minutes=Minutes
 message.alert.seconds=Seconds
+admin.transfers=Transfers
