--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1437,3 +1437,4 @@ message.alert.timerTimeTo=Time to start update
 message.alert.hours=Hours
 message.alert.minutes=Minutes
 message.alert.seconds=Seconds
+admin.transfers=Transfers
