--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1388,3 +1388,4 @@ admin.generalStats.mailing.status=Enable mailing
 admin.generalStats.mailing.time=Mailing time
 admin.generalStats.mailing.email=Email
 btcWallet.subtractFeeFromAmount=Subtract fee from amount
+message.refill_adresses=refill_adresses
