--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1427,3 +1427,4 @@ admin.generalStats.mailing.status=Enable mailing
 admin.generalStats.mailing.time=Mailing time
 admin.generalStats.mailing.email=Email
 btcWallet.subtractFeeFromAmount=Subtract fee from amount
+message.refill_adresses=refill_adresses
