--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1320,3 +1320,5 @@ admin.generalStats.mailing.time=Mailing time
 admin.generalStats.mailing.email=Email
 btcWallet.subtractFeeFromAmount=Subtract fee from amount
 message.refill_adresses=refill_adresses
+admin.address.additionalFieldName=Additional address field
+admin.refillAdresses=Refill addresses
