fix txhash, admin menu, iota wallet

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -17,6 +17,8 @@ admin.email=\u0627\u0644\u0628\u0631\u064A\u062F \u0627\u0644\u0627\u0644\u0643\
 admin.finPassword=\u0643\u0644\u0645\u0629 \u0627\u0644\u0633\u0631 \u0627\u0644\u0645\u0627\u0644\u064A\u0629
 
 admin.finance=\u0627\u0644\u0645\u0627\u0644\u064A\u0629
+admin.reports=Reports
+
 admin.listOfAdmins=\u0642\u0627\u0626\u0645\u0629 \u0627\u0639\u0636\u0627\u0621 \u0627\u0644\u0627\u062F\u0627\u0631\u0629
 admin.listOfUsers=\u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0645\u0633\u062A\u062E\u062F\u0645\u064A\u0646
 admin.login= \u062A\u0633\u062C\u064A\u0644 \u0627\u0644\u062F\u062E\u0648\u0644
@@ -592,6 +594,7 @@ inputoutput.commissionAmount=\u0627\u0644\u0639\u0645\u0648\u0644\u0629
 inputoutput.merchant=\u0646\u0638\u0627\u0645 \u0627\u0644\u062F\u0641\u0639
 inputoutput.operationtype=\u0627\u0644\u0646\u0648\u0639
 inputoutput.order=ID \u0627\u0644\u0645\u0639\u0627\u0645\u0644\u0629
+inputoutput.txHash=hash \u0627\u0644\u0645\u0639\u0627\u0645\u0644\u0629
 inputoutput.status=\u0627\u0644\u062D\u0627\u0644\u0629
 inputoutput.statusTrue=\u062A\u0645\u062A
 inputoutput.statusFalse=\u0628\u0627\u0644\u0627\u0646\u062A\u0638\u0627\u0631
@@ -1244,6 +1247,7 @@ refill.generate=Generate new address
 input.warning.XRP=IMPORTANT! When making a payment, be sure to include the following values in the address field and Destination Tag, otherwise the money will not be credited. Save the transaction hash for resolving disputes in case they arise
 merchant.ripple.emptyRefill=Refill on {0}. No transfer to account because of 20 xrp must holds on your account
 merchants.modalOutputAddressTag=Destination tag
+merchants.withdrawDetails.txHash=Transaction hash
 merchants.withdrawDetails.destinationTag=Destination tag
  Payment Destination TAG: {1}
 merchants.withdrawNotification.ON_BCH_EXAM=Withdraw confirmed
@@ -1319,6 +1323,7 @@ message.cp.FIAT=Local markets
 transfer.accept.success={0} successfully transferred to your account
 bchWallet.title=Bitcoin Cash Wallet
 dogeWallet.title=Dogecoin Wallet
+admin.autoTrading.menu=Auto-trading
 admin.autoTrading.title=Auto-trading settings
 admin.autoTrading.settings.roles=Role settings
 admin.autoTrading.settings.bot=General settings
@@ -1333,6 +1338,9 @@ admin.autoTrading.bot.status=Enabled
 admin.autoTrading.bot.timeout=Timeout before accept, ms
 input.warning.Payeer=ATTENTION! Temporary technical problems with automatic refill through Payeer.<br>\\\
 Please contact our support after payment to pass costs to your account!
+input.warning.IOTA=Please send IOTA from your personal wallet! \
+    If you are sending  IOTA from another exchange, contact the SUPPORT for depositing. \
+    Transactions from other exchanges are deposited ONLY IN MANUAL MODE  according to the request in support within 24 hours
 admin.autoTrading.settings.bot.launch=Launch settings
 admin.autoTrading.settings.bot.trading=Trading settings
 admin.autoTrading.bot.launchInterval=Interval between launches, min
