--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -255,6 +255,7 @@ merchants.modalOutputWallet = 输入钱袋的数目：
 admin.successfulDeleteUserFiles = 已成功删除文件
 dashboard.sellCurrency = 卖出货币
 admin.finance = 财政
+admin.reports=Reports
 dashboard.updatePasswordTitle = 更改密码表单
 chart.nodata = 数据不可用
 dashboard.amount = 数量
@@ -587,6 +588,7 @@ inputoutput.commissionAmount=手续费
 inputoutput.merchant=付款系统
 inputoutput.operationtype = 类型
 inputoutput.order =ID业务
+inputoutput.txHash=Transaction hash
 inputoutput.status =状态
 inputoutput.statusTrue=完成
 inputoutput.statusFalse=有待
@@ -1167,6 +1169,7 @@ refill.generate=Generate new address
 input.warning.XRP=IMPORTANT! When making a payment, be sure to include the following values in the address field and Destination Tag, otherwise the money will not be credited. Save the transaction hash for resolving disputes in case they arise
 merchant.ripple.emptyRefill=Refill on {0}. No transfer to account because of 20 xrp must holds on your account
 merchants.modalOutputAddressTag=Destination tag
+merchants.withdrawDetails.txHash=Transaction hash
 merchants.withdrawDetails.destinationTag=Destination tag
 merchants.withdrawNotification.ON_BCH_EXAM=Withdraw confirmed
 btcWallet.createRequest=Create refill request
@@ -1239,6 +1242,7 @@ orders.roleFilter=Show orders for roles
 orders.allRoles=All roles
 transfer.accept.success={0} successfully transferred to your account
 bchWallet.title=Bitcoin Cash Wallet
+admin.autoTrading.menu=Auto-trading
 admin.autoTrading.title=Auto-trading settings
 admin.autoTrading.settings.roles=Role settings
 admin.autoTrading.settings.bot=General settings
@@ -1254,6 +1258,9 @@ admin.autoTrading.bot.timeout=Timeout before accept, ms
 dogeWallet.title=Dogecoin Wallet
 input.warning.Payeer=ATTENTION! Temporary technical problems with automatic refill through Payeer.<br>\\\
 Please contact our support after payment to pass costs to your account!
+input.warning.IOTA=Please send IOTA from your personal wallet! \
+    If you are sending  IOTA from another exchange, contact the SUPPORT for depositing. \
+    Transactions from other exchanges are deposited ONLY IN MANUAL MODE  according to the request in support within 24 hours
 admin.autoTrading.settings.bot.launch=Launch settings
 admin.autoTrading.settings.bot.trading=Trading settings
 admin.autoTrading.bot.launchInterval=Interval between launches, min
