--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -29,6 +29,7 @@ admin.editUser=Edit user
 admin.email=Email
 admin.finPassword=Financial password
 admin.finance=Finances
+admin.reports=Reports
 admin.listOfAdmins=List of administrators
 admin.listOfUsers=Users list
 admin.login=Login
@@ -567,6 +568,7 @@ inputoutput.commissionAmount=Commission
 inputoutput.merchant=Payment system
 inputoutput.operationtype=Type
 inputoutput.order=Transaction ID
+inputoutput.txHash=Transaction hash
 inputoutput.status=Status
 inputoutput.statusTrue=Completed
 inputoutput.statusFalse=Pending
@@ -873,6 +875,9 @@ transfer.warning=ATTENTION<br/>This is transfer of costs to OTHER user WITHIN st
 input.warning.BTC=The address is valid for a SINGLE input.<br/>For each refill, create new input request.
 input.warning.EDR=The address is valid for a SINGLE input.<br/>For each refill, create new input request.
 input.warning.ETH=You can not make a deposit via contracts or send withdrawals to contracts!.
+input.warning.IOTA=Please send IOTA from your personal wallet! \
+    If you are sending  IOTA from another exchange, contact the SUPPORT for depositing. \
+    Transactions from other exchanges are deposited ONLY IN MANUAL MODE  according to the request in support within 24 hours
 message.sender=Sender
 message.recipient=Recipient
 
@@ -1095,6 +1100,7 @@ cryptoWallets.title=Cryptocurrency wallets
 ltcWallet.title=Litecoin Wallet
 merchant.ripple.emptyRefill=Refill on {0}. No transfer to account because of 20 xrp must holds on your account
 merchants.modalOutputAddressTag=Destination tag
+merchants.withdrawDetails.txHash=Transaction hash
 merchants.withdrawDetails.destinationTag=Destination tag
 merchants.refill.xrp=Payment Address: {0}   <br>\
  Payment Destination TAG: {1}
@@ -1167,6 +1173,7 @@ field Message: {1}
 atbWallet.title=ATB-coin wallet
 order.accept.wrongRole=You are not allowed to accept orders created by {0}
 orders.roleFilter=Show orders only for current role
+admin.autoTrading.menu=Auto-trading
 admin.autoTrading.title=Auto-trading settings
 admin.autoTrading.settings.roles=Role settings
 admin.autoTrading.settings.bot=General settings
