--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -16,6 +16,7 @@ admin.editUser=Perbarui pengguna
 admin.email=Email
 admin.finPassword=Kata sandi finansial
 admin.finance=Keuangan
+admin.reports=Reports
 admin.listOfAdmins=Daftar bagian administrasi
 admin.listOfUsers=Daftar pengguna
 admin.login=Masuk
@@ -626,6 +627,7 @@ inputoutput.commissionAmount=Komisi
 inputoutput.merchant=Sistim pembayaran
 inputoutput.operationtype=\uFFFDipe
 inputoutput.order=Identitas transaksi
+inputoutput.txHash=Transaction hash
 inputoutput.status=Status
 inputoutput.statusTrue=Diselesaikan
 inputoutput.statusFalse=Menunggu
@@ -1206,6 +1208,7 @@ refill.generate=Generate new address
 input.warning.XRP=IMPORTANT! When making a payment, be sure to include the following values in the address field and Destination Tag, otherwise the money will not be credited. Save the transaction hash for resolving disputes in case they arise
 merchant.ripple.emptyRefill=Refill on {0}. No transfer to account because of 20 xrp must holds on your account
 merchants.modalOutputAddressTag=Destination tag
+merchants.withdrawDetails.txHash=Transaction hash
 merchants.withdrawDetails.destinationTag=Destination tag
  Payment Destination TAG: {1}
 merchants.withdrawNotification.ON_BCH_EXAM=Withdraw confirmed
@@ -1284,6 +1287,7 @@ message.cp.BTC=BTC markets
 message.cp.FIAT=Local markets
 transfer.accept.success={0} successfully transferred to your account
 bchWallet.title=Bitcoin Cash Wallet
+admin.autoTrading.menu=Auto-trading
 admin.autoTrading.title=Auto-trading settings
 admin.autoTrading.settings.roles=Role settings
 admin.autoTrading.settings.bot=General settings
@@ -1312,6 +1316,9 @@ admin.autoTrading.settings.max=Max:
 admin.autoTrading.settings.minGreater=Min value cannot be greater than max value;
 input.warning.Payeer=ATTENTION! Temporary technical problems with automatic refill through Payeer.<br>\\\
 Please contact our support after payment to pass costs to your account!
+input.warning.IOTA=Please send IOTA from your personal wallet! \
+    If you are sending  IOTA from another exchange, contact the SUPPORT for depositing. \
+    Transactions from other exchanges are deposited ONLY IN MANUAL MODE  according to the request in support within 24 hours
 admin.autoTrading.considerRange=Consider orders for price range computation 
 admin.autoTrading.settings.considerRange=Consider user orders for price range
 admin.currencyLimits.maxAmount=Maximal amount
