--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -16,6 +16,7 @@ admin.editUser=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u043
 admin.email=Email
 admin.finPassword=\u0424\u0438\u043D\u0430\u043D\u0441\u043E\u0432\u044B\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
 admin.finance=\u0424\u0438\u043D\u0430\u043D\u0441\u044B
+admin.reports=\u041E\u0442\u0447\u0435\u0442\u044B
 admin.listOfAdmins=\u0421\u043F\u0438\u0441\u043E\u043A \u0430\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440\u043E\u0432
 admin.listOfUsers=\u0421\u043F\u0438\u0441\u043E\u043A \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439
 admin.login=\u041B\u043E\u0433\u0438\u043D
@@ -641,6 +642,7 @@ inputoutput.commissionAmount=\u041A\u043E\u043C\u0438\u0441\u0441\u0438\u044F
 inputoutput.merchant=\u041F\u043B\u0430\u0442\u0435\u0436\u043D\u0430\u044F \u0441\u0438\u0441\u0442\u0435\u043C\u0430
 inputoutput.operationtype=\u0422\u0438\u043F
 inputoutput.order=ID \u0442\u0440\u0430\u043D\u0437\u0430\u043A\u0446\u0438\u0438
+inputoutput.txHash=Hash \u0442\u0440\u0430\u043D\u0437\u0430\u043A\u0446\u0438\u0438
 inputoutput.status=\u0421\u0442\u0430\u0442\u0443\u0441
 inputoutput.statusTrue=\u0412\u044B\u043F\u043E\u043B\u043D\u0435\u043D\u043E
 inputoutput.statusFalse=\u0412 \u043E\u0436\u0438\u0434\u0430\u043D\u0438\u0438
@@ -1248,6 +1250,7 @@ refill.generate=\u0421\u0433\u0435\u043D\u0435\u0440\u0438\u0440\u043E\u0432\u04
 input.warning.XRP=IMPORTANT! When making a payment, be sure to include the following values in the address field and Destination Tag, otherwise the money will not be credited. Save the transaction hash for resolving disputes in case they arise
 merchant.ripple.emptyRefill=Refill on {0}. No transfer to account because of 20 xrp must holds on your account
 merchants.modalOutputAddressTag=Destination tag
+merchants.withdrawDetails.txHash=Transaction hash
 merchants.withdrawDetails.destinationTag=Destination tag
 merchants.withdrawNotification.ON_BCH_EXAM=\u0412\u044B\u0432\u043E\u0434 \u043F\u043E\u0434\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043D
 btcWallet.createRequest=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0437\u0430\u044F\u0432\u0443 \u043D\u0430 \u0432\u044B\u0432\u043E\u0434
@@ -1319,6 +1322,7 @@ atbWallet.title=ATB-coin wallet
 order.accept.wrongRole=\u0412\u044B \u043D\u0435 \u043C\u043E\u0436\u0435\u0442\u0435 \u043F\u0440\u0438\u043D\u044F\u0442\u044C \u043E\u0440\u0434\u0435\u0440 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F \u0441 \u0440\u043E\u043B\u044C\u044E {0}
 orders.roleFilter=\u041F\u043E\u043A\u0430\u0437\u044B\u0432\u0430\u0442\u044C \u043E\u0440\u0434\u0435\u0440\u0430 \u0442\u043E\u043B\u044C\u043A\u043E \u0434\u043B\u044F \u0442\u0435\u043A\u0443\u0449\u0435\u0439 \u0440\u043E\u043B\u0438
 orders.allRoles=\u0412\u0441\u0435 \u0440\u043E\u043B\u0438
+admin.autoTrading.menu=\u0410\u0432\u0442\u043E-\u0442\u043E\u0440\u0433\u043E\u0432\u043B\u044F
 admin.autoTrading.title=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0430\u0432\u0442\u043E-\u0442\u043E\u0440\u0433\u043E\u0432\u043B\u0438
 message.cp.USD=USD markets
 message.cp.BTC=BTC markets
@@ -1339,6 +1343,8 @@ admin.autoTrading.bot.timeout=\u041E\u0442\u0441\u0440\u043E\u0447\u043A\u0430 \
 dogeWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A Dogecoin
 input.warning.Payeer=\u0412\u041D\u0418\u041C\u0410\u041D\u0418\u0415! \u0412\u0440\u0435\u043C\u0435\u043D\u043D\u044B\u0435 \u0442\u0435\u0445\u043D\u0438\u0447\u0435\u0441\u043A\u0438\u0435 \u0437\u0430\u0442\u0440\u0443\u0434\u043D\u0435\u043D\u0438\u044F \u0441 \u0430\u0432\u0442\u043E\u043C\u0430\u0442\u0438\u0447\u0435\u0441\u043A\u0438\u043C \u0437\u0430\u0447\u0438\u0441\u043B\u0435\u043D\u0438\u0435\u043C \u043E\u043F\u043B\u0430\u0442 \u0441\u0438\u0441\u0442\u0435\u043C\u044B Payeer.<br>\
 \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u043F\u043E\u0441\u043B\u0435 \u043E\u043F\u043B\u0430\u0442\u044B \u043E\u0431\u0440\u0430\u0442\u0438\u0442\u0435\u0441\u044C \u0432 \u043D\u0430\u0448\u0443 \u043F\u043E\u0434\u0434\u0435\u0440\u0436\u043A\u0443 \u0434\u043B\u044F \u0437\u0430\u0447\u0438\u0441\u043B\u0435\u043D\u0438\u044F \u0441\u0440\u0435\u0434\u0441\u0442\u0432 \u043D\u0430 \u0431\u0430\u043B\u0430\u043D\u0441!
+input.warning.IOTA=\u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u043E\u0442\u043F\u0440\u0430\u0432\u043B\u044F\u0439\u0442\u0435 IOTA \u0438\u0437 \u043B\u0438\u0447\u043D\u043E\u0433\u043E \u043A\u043E\u0448\u0435\u043B\u044C\u043A\u0430! \
+  \u0412 \u0441\u043B\u0443\u0447\u0430\u0435 \u043E\u0442\u043F\u0440\u0430\u0432\u043A\u0438 IOTA \u0441 \u0434\u0440\u0443\u0433\u043E\u0439 \u0431\u0438\u0440\u0436\u0438 \u0437\u0430\u0447\u0438\u0441\u043B\u0435\u043D\u0438\u0435 \u043F\u0440\u043E\u0445\u043E\u0434\u0438\u0442 \u0422\u041E\u041B\u042C\u041A\u041E \u0432 \u0440\u0443\u0447\u043D\u043E\u043C \u0440\u0435\u0436\u0438\u043C\u0435 \u0447\u0435\u0440\u0435\u0437 \u0442\u0435\u0445\u043F\u043E\u0434\u0434\u0435\u0440\u0436\u043A\u0443 \u0432 \u0442\u0435\u0447\u0435\u043D\u0438\u0438 24 \u0447\u0430\u0441\u043E\u0432.
 admin.autoTrading.settings.bot.launch=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0437\u0430\u043F\u0443\u0441\u043A\u0430
 admin.autoTrading.settings.bot.trading=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0442\u043E\u0440\u0433\u043E\u0432\u043B\u0438
 admin.autoTrading.bot.launchInterval=\u0418\u043D\u0442\u0435\u0440\u0432\u0430\u043B \u043C\u0435\u0436\u0434\u0443 \u0437\u0430\u043F\u0443\u0441\u043A\u0430\u043C\u0438, \u043C\u0438\u043D
