--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1259,8 +1259,8 @@ dogeWallet.title=Dogecoin Wallet
 input.warning.Payeer=ATTENTION! Temporary technical problems with automatic refill through Payeer.<br>\\\
 Please contact our support after payment to pass costs to your account!
 input.warning.IOTA=Please send IOTA from your personal wallet! \
-    If you are sending  IOTA from another exchange, contact the SUPPORT for depositing. \
-    Transactions from other exchanges are deposited ONLY IN MANUAL MODE  according to the request in support within 24 hours
+    If you are sending  IOTA from another exchange, contact the SUPPORT for depositing. <br>\
+    Transactions from other exchanges are deposited ONLY IN MANUAL MODE  according to the request in support within 48 hours
 admin.autoTrading.settings.bot.launch=Launch settings
 admin.autoTrading.settings.bot.trading=Trading settings
 admin.autoTrading.bot.launchInterval=Interval between launches, min
