--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -876,8 +876,8 @@ input.warning.BTC=The address is valid for a SINGLE input.<br/>For each refill, 
 input.warning.EDR=The address is valid for a SINGLE input.<br/>For each refill, create new input request.
 input.warning.ETH=You can not make a deposit via contracts or send withdrawals to contracts!.
 input.warning.IOTA=Please send IOTA from your personal wallet! \
-    If you are sending  IOTA from another exchange, contact the SUPPORT for depositing. \
-    Transactions from other exchanges are deposited ONLY IN MANUAL MODE  according to the request in support within 24 hours
+    If you are sending  IOTA from another exchange, contact the SUPPORT for depositing. <br>\
+    Transactions from other exchanges are deposited ONLY IN MANUAL MODE  according to the request in support within 48 hours
 message.sender=Sender
 message.recipient=Recipient
 
