--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1317,8 +1317,8 @@ admin.autoTrading.settings.minGreater=Min value cannot be greater than max value
 input.warning.Payeer=ATTENTION! Temporary technical problems with automatic refill through Payeer.<br>\\\
 Please contact our support after payment to pass costs to your account!
 input.warning.IOTA=Please send IOTA from your personal wallet! \
-    If you are sending  IOTA from another exchange, contact the SUPPORT for depositing. \
-    Transactions from other exchanges are deposited ONLY IN MANUAL MODE  according to the request in support within 24 hours
+    If you are sending  IOTA from another exchange, contact the SUPPORT for depositing. <br>\
+    Transactions from other exchanges are deposited ONLY IN MANUAL MODE  according to the request in support within 48 hours
 admin.autoTrading.considerRange=Consider orders for price range computation 
 admin.autoTrading.settings.considerRange=Consider user orders for price range
 admin.currencyLimits.maxAmount=Maximal amount
