--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1321,3 +1321,4 @@ admin.generalStats.mailing.email=Email
 btcWallet.subtractFeeFromAmount=Subtract fee from amount
 admin.generalStats.button.currencyPairsInOutComis=Statistics by in/out by currencies
 admin.generalStats.button.currencyPairsComissions=Statistics by orders comissions and pairs
+adminAuthority.SEE_REPORTS=Download reports and subscribe fro reports
