--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1465,5 +1465,5 @@ admin.generalStats.mailing.time=Mailing time
 admin.generalStats.mailing.email=Email
 btcWallet.subtractFeeFromAmount=Subtract fee from amount
 message.refill_adresses=refill_adresses
-admin.address.additionalFieldName=Additional address field
+admin.address.additionalFieldName=Additional address field name
 admin.refillAdresses=Refill addresses
