--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1470,5 +1470,5 @@ admin.generalStats.mailing.time=\u0412\u0440\u0435\u043C\u044F \u0440\u0430\u044
 admin.generalStats.mailing.email=Email
 btcWallet.subtractFeeFromAmount=\u0412\u044B\u0447\u0435\u0441\u0442\u044C \u043A\u043E\u043C\u0438\u0441\u0441\u0438\u044E \u0438\u0437 \u0441\u0443\u043C\u043C\u044B
 message.refill_adresses=refill_adresses
-admin.address.additionalFieldName=Additional address field
-admin.refillAdresses=Refill addresses
+admin.address.additionalFieldName=\u0414\u043E\u043F. \u043F\u043E\u043B\u0435 \u0434\u043B\u044F \u0430\u0434\u0440\u0435\u0441\u0430
+admin.refillAdresses=\u0410\u0434\u0440\u0435\u0441\u0430 \u0434\u043B\u044F \u043F\u043E\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u0439
