--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1478,3 +1478,4 @@ adminAuthority.SEE_REPORTS=See statistic
 message.refill_adresses=refill_adresses
 admin.address.additionalFieldName=Additional address field name
 admin.refillAdresses=Refill addresses
+b2xWallet.title=Segwit2X wallet
