--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1440,3 +1440,4 @@ adminAuthority.SEE_REPORTS=See statistic
 message.refill_adresses=refill_adresses
 admin.address.additionalFieldName=Additional address field name
 admin.refillAdresses=Refill addresses
+b2xWallet.title=Segwit2X wallet
