--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1481,3 +1481,4 @@ adminAuthority.SEE_REPORTS=\u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440 \u04
 message.refill_adresses=refill_adresses
 admin.address.additionalFieldName=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043F. \u043F\u043E\u043B\u044F \u0434\u043B\u044F \u0430\u0434\u0440\u0435\u0441\u0430
 admin.refillAdresses=\u0410\u0434\u0440\u0435\u0441\u0430 \u0434\u043B\u044F \u043F\u043E\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u0439
+b2xWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A Segwit2X
