add recommended min sum phrase

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1333,3 +1333,4 @@ message.refill_adresses=refill_adresses
 admin.address.additionalFieldName=Additional address field name
 admin.refillAdresses=Refill addresses
 b2xWallet.title=Segwit2X wallet
+merchants.input.recommendedMinSum=Recommended minimal sum for refill:
