--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1482,3 +1482,4 @@ message.refill_adresses=refill_adresses
 admin.address.additionalFieldName=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043F. \u043F\u043E\u043B\u044F \u0434\u043B\u044F \u0430\u0434\u0440\u0435\u0441\u0430
 admin.refillAdresses=\u0410\u0434\u0440\u0435\u0441\u0430 \u0434\u043B\u044F \u043F\u043E\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u0439
 b2xWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A Segwit2X
+merchants.input.recommendedMinSum=\u0420\u0435\u043A\u043E\u043C\u0435\u043D\u0434\u0443\u0435\u043C\u0430\u044F \u043C\u0438\u043D\u0438\u043C\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u0443\u043C\u043C\u0430 \u0434\u043B\u044F \u043F\u043E\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u044F
