--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1333,3 +1333,9 @@ message.refill_adresses=refill_adresses
 admin.address.additionalFieldName=Additional address field name
 admin.refillAdresses=Refill addresses
 b2xWallet.title=Segwit2X wallet
+message.additional.deposit.warning=Depositing tokens to this address other than {0} will result in your funds being lost.
+message.additional.address.warning.XLM=If the memo-id is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-id.
+message.additional.address.warning.XRP=If the destination tag is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a destination tag.
+message.additional.address.warning.XEM=When depositing, please send your message unencrypted. Please do not send mosaic or multisig transactions. They will not be credited.\
+If the message is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a message.
+refill.copyAdd=Copy {0}
