--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1490,28 +1490,10 @@ admin.generalStats.menu.mailing=Mailing settings
 admin.generalStats.mailing.status=Enable mailing
 admin.generalStats.mailing.time=Mailing time
 admin.generalStats.mailing.email=Email
-ip.ban.message=Your IP address is banned for {0}. Please try to login again later
-ip.ban.time.minutes = {0} minutes
-ip.ban.time.hours = {0} hours
 btcWallet.subtractFeeFromAmount=Subtract fee from amount
-merchants.modalOutputSumCommission=Total Fee : __amount __currency
-merchants.withdrawDetails.outputSumCommission=Total Fee
-merchant.commission.rateWithLimit={0}, but not less than {1}
 admin.generalStats.button.currencyPairsInOutComis=Statistics by in/out by currencies
 admin.generalStats.button.currencyPairsComissions=Statistics by orders comissions and pairs
 admin.transfers=Transfers
-
-merchants.modalOutputSumCommission=Total Fee : __amount __currency
-merchants.withdrawDetails.outputSumCommission=Total Fee
-merchant.commission.rateWithLimit={0}, but not less than {1}
-admin.generalStats.menu.stats=Statistics
-admin.generalStats.menu.mailing=Mailing settings
-admin.generalStats.mailing.status=Enable mailing
-admin.generalStats.mailing.time=Mailing time
-admin.generalStats.mailing.email=Email
-btcWallet.subtractFeeFromAmount=Subtract fee from amount
-admin.generalStats.button.currencyPairsInOutComis=Statistics by in/out by currencies
-admin.generalStats.button.currencyPairsComissions=Statistics by orders comissions and pairs
 adminAuthority.SEE_REPORTS=See statistic
 message.refill_adresses=refill_adresses
 admin.address.additionalFieldName=Additional address field name
@@ -1524,3 +1506,24 @@ message.additional.address.warning.XEM=When depositing, please send your message
 If the message is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a message.
 refill.copyAdd=Copy {0}
 merchants.input.recommendedMinSum=Recommended minimal sum for refill:
+partners.title=For partners
+partners.content=<p>Exrates.me team is ready to consider your request to add your coin or token to the listing.\
+To submit a request, please provide the following technical information on your coin (token):</p>\
+<p>1. General description of technology - whether it is blockchain-driven or not, smart contract support etc.</p>\
+<p>2. Full node - where to download, how to install and run on Windows and Linux (Ubuntu), documented configuration options and command line arguments.</p>\
+<p>3. Detailed documentation for node's API, primarily following methods:</p>\
+  <ul>\
+<li>create new address (account)</li>\
+<li>send transaction</li>\
+<li>get transaction by ID</li>\
+<li>find all transactions by parameters - receiver address (account), time period, block etc</li>\
+  </ul>\
+<p>4. Whether there is a system of notifications on new block or incoming transaction (like in Bitcoin Core). If there is - documentation on that system</p>\
+<p>5. Available production-ready solutions (libraries/SDK) for different programming languages. </p>\
+<p>6. Access to testnet, test online wallets, faucets or other ways to receive test coins </p>\
+<p>7. Links to GitHub and supporting community - Slack, Reddit, Gitter etc.</p>\
+<br/>\
+<p>We will be inform you on exact price only after studying all the technical documentation and the approval of the management.</p>\
+<br/>\
+<p>If you are interested, please fill in the request form {0} with all required technical data.</p> \
+<p><strong>Please fill in subject as: "Add coin".</strong></p>
