fix partners page

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1361,23 +1361,22 @@ If the message is not included in your transfer, we cannot credit your account, 
 refill.copyAdd=Copy {0}
 merchants.input.recommendedMinSum=Recommended minimal sum for refill:
 partners.title=For partners
-partners.content=<p>Exrates.me team is ready to consider your request to add your coin or token to the listing.\
+partners.content=<p>Exrates.me team is ready to consider your request to add your coin or token to the listing. \
 To submit a request, please provide the following technical information on your coin (token):</p>\
 <p>1. General description of technology - whether it is blockchain-driven or not, smart contract support etc.</p>\
 <p>2. Full node - where to download, how to install and run on Windows and Linux (Ubuntu), documented configuration options and command line arguments.</p>\
-<p>3. Detailed documentation for node's API, primarily following methods:</p>\
+<p>3. Detailed documentation for node API, primarily following methods: </p>\
   <ul>\
-<li>create new address (account)</li>\
-<li>send transaction</li>\
-<li>get transaction by ID</li>\
-<li>find all transactions by parameters - receiver address (account), time period, block etc</li>\
+<li>create new address (account);</li>\
+<li>send transaction;</li>\
+<li>get transaction by ID;</li>\
+<li>find all transactions by parameters - receiver address (account), time period, block etc;</li>\
   </ul>\
-<p>4. Whether there is a system of notifications on new block or incoming transaction (like in Bitcoin Core). If there is - documentation on that system</p>\
-<p>5. Available production-ready solutions (libraries/SDK) for different programming languages. </p>\
-<p>6. Access to testnet, test online wallets, faucets or other ways to receive test coins </p>\
+<p>4. Whether there is a system of notifications on new block or incoming transaction (like in Bitcoin Core). If there is - documentation on that system.</p>\
+<p>5. Available production-ready solutions (libraries/SDK) for different programming languages.</p>\
+<p>6. Access to testnet, test online wallets, faucets or other ways to receive test coins.</p>\
 <p>7. Links to GitHub and supporting community - Slack, Reddit, Gitter etc.</p>\
 <br/>\
 <p>We will be inform you on exact price only after studying all the technical documentation and the approval of the management.</p>\
 <br/>\
-<p>If you are interested, please fill in the request form {0} with all required technical data.</p> \
-<p><strong>Please fill in subject as: "Add coin".</strong></p>
+<p>If you are interested, please fill in the request form {0} with all required technical data.</p>
