--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1485,6 +1485,6 @@ To submit a request, please provide the following technical information on your 
 <p>6. Access to testnet, test online wallets, faucets or other ways to receive test coins.</p>\
 <p>7. Links to GitHub and supporting community - Slack, Reddit, Gitter etc.</p>\
 <br/>\
-<p>We will be inform you on exact price only after studying all the technical documentation and the approval of the management.</p>\
+<p>We will inform you on exact price only after studying all the technical documentation and the approval of the management.</p>\
 <br/>\
-<p>If you are interested, please fill in the request form {0} with all required technical data.</p>
+<p>If you are interested, please mail to support@exrates.me with all required technical data.</p>
