--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1525,4 +1525,4 @@ To submit a request, please provide the following technical information on your 
 <br/>\
 <p>We will inform you on exact price only after studying all the technical documentation and the approval of the management.</p>\
 <br/>\
-<p>If you are interested, please mail to support@exrates.me with all required technical data.</p>
+<p>If you are interested, please mail to {0} with all required technical data.</p>
