add extended user wallet in admin page

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1449,3 +1449,7 @@ To submit a request, please provide the following technical information on your 
 <p>We will inform you on exact price only after studying all the technical documentation and the approval of the management.</p>\
 <br/>\
 <p>If you are interested, please mail to {0} with all required technical data.</p>
+userWallet.input=Refilled
+userWallet.output=Withdrawn
+userWallet.buy=Bought
+userWallet.sell=Sold
