--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1530,3 +1530,4 @@ userWallet.input=Refilled
 userWallet.output=Withdrawn
 userWallet.buy=Bought
 userWallet.sell=Sold
+userWallets.excludeZero=Exclude zero balances
