--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1453,3 +1453,4 @@ userWallet.input=Refilled
 userWallet.output=Withdrawn
 userWallet.buy=Bought
 userWallet.sell=Sold
+userWallets.excludeZero=Exclude zero balances
