--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1384,3 +1384,4 @@ userWallet.input=Refilled
 userWallet.output=Withdrawn
 userWallet.buy=Bought
 userWallet.sell=Sold
+userWallets.excludeZero=Exclude zero balances
