--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1492,3 +1492,4 @@ userWallet.input=Refilled
 userWallet.output=Withdrawn
 userWallet.buy=Bought
 userWallet.sell=Sold
+userWallets.excludeZero=Exclude zero balances
