add eth market + b2x/eth

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1493,3 +1493,4 @@ userWallet.output=Withdrawn
 userWallet.buy=Bought
 userWallet.sell=Sold
 userWallets.excludeZero=Exclude zero balances
+message.cp.ETH=ETH markets
