--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1454,3 +1454,4 @@ userWallet.output=Withdrawn
 userWallet.buy=Bought
 userWallet.sell=Sold
 userWallets.excludeZero=Exclude zero balances
+message.cp.ETH=ETH markets
