--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1531,3 +1531,4 @@ userWallet.output=Withdrawn
 userWallet.buy=Bought
 userWallet.sell=Sold
 userWallets.excludeZero=Exclude zero balances
+bcdWallet.title=Wallet Bitcoin-diamond
