--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1385,3 +1385,4 @@ userWallet.output=Withdrawn
 userWallet.buy=Bought
 userWallet.sell=Sold
 userWallets.excludeZero=Exclude zero balances
+bcdWallet.title=Wallet Bitcoin-diamond
