--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1532,6 +1532,7 @@ userWallet.output=\u0412\u044B\u0432\u0435\u0434\u0435\u043D\u043E
 userWallet.buy=\u041A\u0443\u043F\u043B\u0435\u043D\u043E
 userWallet.sell=\u041F\u0440\u043E\u0434\u0430\u043D\u043E
 userWallets.excludeZero=\u0421\u043A\u0440\u044B\u0442\u044C \u043D\u0443\u043B\u0435\u0432\u044B\u0435 \u0431\u0430\u043B\u0430\u043D\u0441\u044B
+bcdWallet.title=\u041A\u043E\u0448\u0435\u043B\u0435\u043A Bitcoin-diamond
 
 
 
