add balances stats

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1535,3 +1535,5 @@ message.cp.ETH=ETH markets
 bcdWallet.title=Wallet Bitcoin-diamond
 bcxWallet.title=BitcoinX Wallet
 occWallet.title=Octoin Wallet
+reports.totalBalances=Total balances statistics
+reports.balances.buttonTitle=Balances
