--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1389,3 +1389,5 @@ userWallets.excludeZero=Exclude zero balances
 bcdWallet.title=Wallet Bitcoin-diamond
 bcxWallet.title=BitcoinX Wallet
 occWallet.title=Octoin Wallet
+reports.totalBalances=Total balances statistics
+reports.balances.buttonTitle=Balances
