--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1458,3 +1458,5 @@ message.cp.ETH=ETH markets
 bcdWallet.title=Wallet Bitcoin-diamond
 bcxWallet.title=BitcoinX Wallet
 occWallet.title=Octoin Wallet
+reports.totalBalances=Total balances statistics
+reports.balances.buttonTitle=Balances
