--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1497,3 +1497,5 @@ message.cp.ETH=ETH markets
 bcdWallet.title=Wallet Bitcoin-diamond
 bcxWallet.title=BitcoinX Wallet
 occWallet.title=Octoin Wallet
+reports.totalBalances=Total balances statistics
+reports.balances.buttonTitle=Balances
