--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1536,6 +1536,8 @@ message.cp.ETH=ETH markets
 bcdWallet.title=\u041A\u043E\u0448\u0435\u043B\u0435\u043A Bitcoin-diamond
 bcxWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A BitcoinX
 occWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A Octoin
+reports.totalBalances=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043A\u0430 \u043E\u0431\u0449\u0438\u0445 \u0431\u0430\u043B\u0430\u043D\u0441\u043E\u0432
+reports.balances.buttonTitle=\u0411\u0430\u043B\u0430\u043D\u0441\u044B
 
 
 
