--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1387,3 +1387,4 @@ userWallet.buy=Bought
 userWallet.sell=Sold
 userWallets.excludeZero=Exclude zero balances
 bcdWallet.title=Wallet Bitcoin-diamond
+bcxWallet.title=BitcoinX Wallet
