--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1533,3 +1533,4 @@ userWallet.sell=Sold
 userWallets.excludeZero=Exclude zero balances
 message.cp.ETH=ETH markets
 bcdWallet.title=Wallet Bitcoin-diamond
+bcxWallet.title=BitcoinX Wallet
