--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1456,3 +1456,4 @@ userWallet.sell=Sold
 userWallets.excludeZero=Exclude zero balances
 message.cp.ETH=ETH markets
 bcdWallet.title=Wallet Bitcoin-diamond
+occWallet.title=Octoin Wallet
