--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1495,3 +1495,4 @@ userWallet.sell=Sold
 userWallets.excludeZero=Exclude zero balances
 message.cp.ETH=ETH markets
 bcdWallet.title=Wallet Bitcoin-diamond
+occWallet.title=Octoin Wallet
