--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -274,9 +274,9 @@ register.form=registration form
 register.loginLabel=used as an access login, shall not be changed.
 register.nickname=Nickname*
 register.password=password*
-register.readrules=read and understood registrtion rules*
+register.readrules=read and understood registration rules*
 register.repeatpassword=repeat password*
-register.sendletter=you've been sent a letterat the hash to confirm registration
+register.sendletter=you've been sent a letter to confirm registration
 register.submit=get registered
 register.successfullyproved=You have successfully verified your email hash. Now you can log in
 register.title=registration of a new user
