--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -911,6 +911,9 @@ admin.withdraw.manual=Manual withdrawal
 admin.withdraw.confirm=On confirmation
 admin.withdraw.accepted=Accepted
 admin.withdraw.declined=Declined
+admin.withdrawal.statistic.filter=Withdrawal statistic
+admin.withdrawal.statistic.manual_withdrawals=Manual withdrawals:
+admin.withdrawal.statistic.auto_withdrawals=Auto withdrawals:
 merchants.invoice.ACCEPTED_AUTO=Accepted
 merchants.invoice.ON_BCH_EXAM=
 merchants.btc_invoice.expired.message=Your BTC invoice id {0} has been expired!
