--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1502,3 +1502,6 @@ bcxWallet.title=BitcoinX Wallet
 occWallet.title=Octoin Wallet
 reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
+admin.withdrawal.statistic.filter=Withdrawal statistic
+admin.withdrawal.statistic.manual_withdrawals=Manual withdrawals:
+admin.withdrawal.statistic.auto_withdrawals=Auto withdrawals:
