--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -987,6 +987,9 @@ admin.withdraw.manual=Manual withdrawal
 admin.withdraw.confirm=On confirmation
 admin.withdraw.accepted=Accepted
 admin.withdraw.declined=Declined
+admin.withdrawal.statistic.filter=Withdrawal statistic
+admin.withdrawal.statistic.manual_withdrawals=Manual withdrawals:
+admin.withdrawal.statistic.auto_withdrawals=Auto withdrawals:
 admin.invoice.updateAmount=Update actual sum of payment
 merchants.invoice.ACCEPTED_AUTO=Accepted
 merchants.invoice.ON_BCH_EXAM=
