--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -841,6 +841,9 @@ admin.withdraw.manual=Manual withdrawal
 admin.withdraw.confirm=On confirmation
 admin.withdraw.accepted=Accepted
 admin.withdraw.declined=Declined
+admin.withdrawal.statistic.filter=Withdrawal statistic
+admin.withdrawal.statistic.manual_withdrawals=Manual withdrawals:
+admin.withdrawal.statistic.auto_withdrawals=Auto withdrawals:
 admin.invoice.updateAmount=Update actual sum of payment
 merchants.invoice.ACCEPTED_AUTO=Accepted
 merchants.btc_invoice.expired.message=Your BTC invoice id {0} has been expired!
