--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -988,6 +988,9 @@ admin.withdraw.manual=\u0420\u0443\u0447\u043D\u043E\u0439 \u0432\u044B\u0432\u0
 admin.withdraw.confirm=\u041D\u0430 \u043F\u043E\u0434\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043D\u0438\u0438
 admin.withdraw.accepted=\u041F\u0440\u0438\u043D\u044F\u0442\u044B\u0435
 admin.withdraw.declined=\u041E\u0442\u043A\u043B\u043E\u043D\u0451\u043D\u043D\u044B\u0435
+admin.withdrawal.statistic.filter=C\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043A\u0430 \u0432\u044B\u0432\u043E\u0434\u043E\u0432
+admin.withdrawal.statistic.manual_withdrawals=\u0420\u0443\u0447\u043D\u044B\u0435 \u0432\u044B\u0432\u043E\u0434\u044B:
+admin.withdrawal.statistic.auto_withdrawals=\u0410\u0432\u0442\u043E \u0432\u044B\u0432\u043E\u0434\u044B:
 admin.invoice.updateAmount=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u0444\u0430\u043A\u0442\u0438\u0447\u0435\u0441\u043A\u0443\u044E \u0441\u0443\u043C\u043C\u0443 \u043F\u043B\u0430\u0442\u0435\u0436\u0430
 merchants.invoice.ACCEPTED_AUTO=\u0423\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043D
 merchants.invoice.ON_BCH_EXAM=
