--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1500,6 +1500,7 @@ message.cp.ETH=ETH markets
 bcdWallet.title=Wallet Bitcoin-diamond
 bcxWallet.title=BitcoinX Wallet
 occWallet.title=Octoin Wallet
+btczWallet.title=BitcoinZ Wallet
 reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
 admin.withdrawal.statistic.filter=Withdrawal statistic
