add fee handling

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1400,3 +1400,5 @@ reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
 lccWallet.title=LitecoinCash Wallet
 bcaWallet.title=Bitcoin Atom Wallet
+fee.wallet.insufficientCosts.title=Insufficient costs on fee wallet!
+fee.wallet.insufficientCosts.body=Insufficient costs on {0} fee wallet {0}!
