--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1508,3 +1508,5 @@ admin.withdrawal.statistic.filter=Withdrawal statistic
 admin.withdrawal.statistic.manual_withdrawals=Manual withdrawals:
 admin.withdrawal.statistic.auto_withdrawals=Auto withdrawals:
 bcaWallet.title=Bitcoin Atom Wallet
+fee.wallet.insufficientCosts.body=Insufficient costs on {0} fee wallet {0}!
+fee.wallet.insufficientCosts.title=Insufficient costs on fee wallet!
