--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1546,3 +1546,5 @@ lccWallet.title=LitecoinCash Wallet
 reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
 bcaWallet.title=Bitcoin Atom Wallet
+fee.wallet.insufficientCosts.body=Insufficient costs on {0} fee wallet {0}!
+fee.wallet.insufficientCosts.title=Insufficient costs on fee wallet!
