--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1469,3 +1469,5 @@ reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
 lccWallet.title=LitecoinCash Wallet
 bcaWallet.title=Bitcoin Atom Wallet
+fee.wallet.insufficientCosts.body=Insufficient costs on {0} fee wallet {0}!
+fee.wallet.insufficientCosts.title=Insufficient costs on fee wallet!
