--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1545,3 +1545,4 @@ btczWallet.title=BitcoinZ Wallet
 lccWallet.title=LitecoinCash Wallet
 reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
+bcaWallet.title=Bitcoin Atom Wallet
