--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1468,3 +1468,4 @@ btczWallet.title=BitcoinZ Wallet
 reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
 lccWallet.title=LitecoinCash Wallet
+bcaWallet.title=Bitcoin Atom Wallet
