--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1399,3 +1399,4 @@ btczWallet.title=BitcoinZ Wallet
 reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
 lccWallet.title=LitecoinCash Wallet
+bcaWallet.title=Bitcoin Atom Wallet
