--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1547,6 +1547,7 @@ lccWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A LitecoinCash
 reports.totalBalances=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043A\u0430 \u043E\u0431\u0449\u0438\u0445 \u0431\u0430\u043B\u0430\u043D\u0441\u043E\u0432
 reports.balances.buttonTitle=\u0411\u0430\u043B\u0430\u043D\u0441\u044B
 message.notes.field.amount.restriction=\u041F\u043E\u043B\u0435 '\u0421\u0443\u043C\u043C\u0430' \u0434\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u0431\u043E\u043B\u044C\u0448\u0435 0
+bcaWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A Bitcoin Atom
 
 
 
