--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1544,3 +1544,4 @@ occWallet.title=Octoin Wallet
 btczWallet.title=BitcoinZ Wallet
 reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
+message.additional.address.warning.DIM=
