--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1506,3 +1506,4 @@ reports.balances.buttonTitle=Balances
 admin.withdrawal.statistic.filter=Withdrawal statistic
 admin.withdrawal.statistic.manual_withdrawals=Manual withdrawals:
 admin.withdrawal.statistic.auto_withdrawals=Auto withdrawals:
+message.additional.address.warning.DIM=When depositing, please send your message unencrypted. Please do not send multisig transactions. They will not be credited.
