--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1398,3 +1398,4 @@ occWallet.title=Octoin Wallet
 btczWallet.title=BitcoinZ Wallet
 reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
+lccWallet.title=LitecoinCash Wallet
