--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1501,6 +1501,7 @@ bcdWallet.title=Wallet Bitcoin-diamond
 bcxWallet.title=BitcoinX Wallet
 occWallet.title=Octoin Wallet
 btczWallet.title=BitcoinZ Wallet
+lccWallet.title=LitecoinCash Wallet
 reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
 admin.withdrawal.statistic.filter=Withdrawal statistic
