--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1542,5 +1542,6 @@ bcdWallet.title=Wallet Bitcoin-diamond
 bcxWallet.title=BitcoinX Wallet
 occWallet.title=Octoin Wallet
 btczWallet.title=BitcoinZ Wallet
+lccWallet.title=LitecoinCash Wallet
 reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
