--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1467,3 +1467,4 @@ occWallet.title=Octoin Wallet
 btczWallet.title=BitcoinZ Wallet
 reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
+lccWallet.title=LitecoinCash Wallet
