--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1506,4 +1506,5 @@ reports.balances.buttonTitle=Balances
 admin.withdrawal.statistic.filter=Withdrawal statistic
 admin.withdrawal.statistic.manual_withdrawals=Manual withdrawals:
 admin.withdrawal.statistic.auto_withdrawals=Auto withdrawals:
-message.additional.address.warning.DIM=When depositing, please send your message unencrypted. Please do not send multisig transactions. They will not be credited.
+message.additional.address.warning.DIM=When depositing, please send your message unencrypted. Please do not send multisig transactions. They will not be credited.\
+If the message is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a message.
