--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1512,3 +1512,4 @@ If the message is not included in your transfer, we cannot credit your account, 
 bcaWallet.title=Bitcoin Atom Wallet
 fee.wallet.insufficientCosts.body=Insufficient costs on {0} fee wallet {0}!
 fee.wallet.insufficientCosts.title=Insufficient costs on fee wallet!
+btcpWallet.title=Bitcoin Private wallet
