--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1552,18 +1552,4 @@ message.notes.field.amount.restriction=\u041F\u043E\u043B\u0435 '\u0421\u0443\u0
 bcaWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A Bitcoin Atom
 fee.wallet.insufficientCosts.body=\u041D\u0435\u0434\u043E\u0441\u0442\u0430\u0442\u043E\u0447\u043D\u043E \u0441\u0440\u0435\u0434\u0441\u0442\u0432 \u043D\u0430 \u043A\u043E\u043C\u0438\u0441\u0441\u0438\u043E\u043D\u043D\u043E\u043C \u043A\u043E\u0448\u0435\u043B\u044C\u043A\u0435 {0} - {0}!
 fee.wallet.insufficientCosts.title=\u041D\u0435\u0434\u043E\u0441\u0442\u0430\u0442\u043E\u0447\u043D\u043E \u0441\u0440\u0435\u0434\u0441\u0442\u0432 \u043D\u0430 \u043A\u043E\u043C\u0438\u0441\u0441\u0438\u043E\u043D\u043D\u043E\u043C \u043A\u043E\u0448\u0435\u043B\u044C\u043A\u0435!
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+btcpWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A Bitcoin Private
