--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1404,3 +1404,4 @@ lccWallet.title=LitecoinCash Wallet
 bcaWallet.title=Bitcoin Atom Wallet
 fee.wallet.insufficientCosts.title=Insufficient costs on fee wallet!
 fee.wallet.insufficientCosts.body=Insufficient costs on {0} fee wallet {0}!
+btcpWallet.title=Bitcoin Private wallet
