--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1405,3 +1405,4 @@ bcaWallet.title=Bitcoin Atom Wallet
 fee.wallet.insufficientCosts.title=Insufficient costs on fee wallet!
 fee.wallet.insufficientCosts.body=Insufficient costs on {0} fee wallet {0}!
 btcpWallet.title=Bitcoin Private wallet
+plcWallet.title=Platincoin Wallet
