--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1406,3 +1406,4 @@ fee.wallet.insufficientCosts.title=Insufficient costs on fee wallet!
 fee.wallet.insufficientCosts.body=Insufficient costs on {0} fee wallet {0}!
 btcpWallet.title=Bitcoin Private wallet
 plcWallet.title=Platincoin Wallet
+admin.datatable.showData=Show data
