--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1514,3 +1514,4 @@ fee.wallet.insufficientCosts.body=Insufficient costs on {0} fee wallet {0}!
 fee.wallet.insufficientCosts.title=Insufficient costs on fee wallet!
 btcpWallet.title=Bitcoin Private wallet
 plcWallet.title=Platincoin Wallet
+admin.datatable.showData=Show data
