--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1554,3 +1554,4 @@ fee.wallet.insufficientCosts.body=\u041D\u0435\u0434\u043E\u0441\u0442\u0430\u04
 fee.wallet.insufficientCosts.title=\u041D\u0435\u0434\u043E\u0441\u0442\u0430\u0442\u043E\u0447\u043D\u043E \u0441\u0440\u0435\u0434\u0441\u0442\u0432 \u043D\u0430 \u043A\u043E\u043C\u0438\u0441\u0441\u0438\u043E\u043D\u043D\u043E\u043C \u043A\u043E\u0448\u0435\u043B\u044C\u043A\u0435!
 btcpWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A Bitcoin Private
 plcWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A Platincoin
+admin.datatable.showData=\u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0434\u0430\u043D\u043D\u044B\u0435
