--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1554,3 +1554,4 @@ message.additional.address.warning.DIM=When depositing, please send your message
 If the message is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a message.
 admin.datatable.showData=Show data
 admin.stats.allRealUsers=All real users
+szcWallet.title=ShopZCoin wallet
