--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1516,3 +1516,4 @@ btcpWallet.title=Bitcoin Private wallet
 plcWallet.title=Platincoin Wallet
 admin.datatable.showData=Show data
 admin.stats.allRealUsers=All real users
+szcWallet.title=ShopZCoin wallet
