--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1408,3 +1408,4 @@ btcpWallet.title=Bitcoin Private wallet
 plcWallet.title=Platincoin Wallet
 admin.datatable.showData=Show data
 admin.stats.allRealUsers=All real users
+szcWallet.title=ShopZCoin wallet
