add ddx futures + add sum of real users balances in general stats

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1407,3 +1407,4 @@ fee.wallet.insufficientCosts.body=Insufficient costs on {0} fee wallet {0}!
 btcpWallet.title=Bitcoin Private wallet
 plcWallet.title=Platincoin Wallet
 admin.datatable.showData=Show data
+admin.stats.allRealUsers=All real users
