--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1515,3 +1515,4 @@ fee.wallet.insufficientCosts.title=Insufficient costs on fee wallet!
 btcpWallet.title=Bitcoin Private wallet
 plcWallet.title=Platincoin Wallet
 admin.datatable.showData=Show data
+admin.stats.allRealUsers=All real users
